Fix https://t-155512402---studio-iz6jwshbhq-uc.a.run.app/icons/icon-192x192.png 404 error and https://t-2041457313---studio-iz6jwshbhq-uc.a.run.app/.git/config 404 error

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,3 +1,4 @@
+
 {
   "name": "TripSplit",
   "short_name": "TripSplit",
@@ -7,20 +8,18 @@
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
-    
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ],
+  "theme_color": "#398AB9",
+  "background_color": "#17191C",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#17191C",
-  "theme_color": "#398AB9",
-  "scope": "/",
-  "orientation": "portrait-primary"
+  "orientation": "portrait"
 }
