--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "name": "TripSplit",
   "short_name": "TripSplit",
@@ -8,18 +7,17 @@
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     }
   ],
-  "theme_color": "#398AB9",
-  "background_color": "#17191C",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait"
+  "background_color": "#17191C",
+  "theme_color": "#398AB9"
 }
